<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>


    <!-- string resources for SearchFragment -->
    <string name="search_hint">Search Entry</string>
    <string name="new_player_stats">New Player Stats</string>
    <string name="entry_hint">Enter Info</string>
    <string name="name">Name</string>
    <string name="new_user">Enter Username</string>
    <string name="weight_hint">Enter Weight</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="new_player_login">New Player Login</string>
    <string name="title_activity_workout_diary">WorkoutDiary</string>
    <string name="menu_title">Menu</string>
    <string name="title_activity_login">Sign in</string>
    <string name="dialogTest">Test</string>

    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--string resources for WorkoutDiary -->

    >
    <string name="activity_name">Workout Diary</string>
    <string name="title_search">Search</string>
    <string name="title_view_stats">View Stats</string>
    <string name="title_new_entry">New Entry</string>
    <string name="text_past_entries">This is where all past workout entries will go.</string>
    <string name="text_search">This is for searching.</string>
    <string name="text_view_stats">This is for viewing statistics.</string>
    <string name="text_new_entry">This is for new entries.</string>
    <string name="drawer_title">Main Menu</string>
    <string name="drawer_title_add_workout">Add Workout</string>
    <string name="drawer_title_stats">User Statistics</string>
    <string name="drawer_title_motivation">Motivation</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="toMainMenu">Go to Main</string>
    <string name="permission_rationale2">Need to fix</string>
    <string name="drawer_title_profile_options">Profile</string>
    <string name="title_add_routine">Add Routine</string>

    <!--String resources for RecordWorkout -->

    <string name="sensorname">BasicSensorsApi</string>
    <string name="intro_text">Hi! Let\'s listen to some available data sources! Check the menu for more actions!</string>
    <string name="action_unregister_listener">Unregister listener</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
    functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="signInTitle">Sign-in</string>
    <string name="emailHint">Enter Email</string>
    <string name="createNewUser">Create New User</string>
    <string name="or">-Or-</string>

    <!--String array of exercise names to test spinner in Profile Stats Activity-->
    <string name="exercise_prompt">Choose an exercise</string>
    <string name="level_bar">Level Progress</string>

    <string-array name="exercise_array">
        <item>Push-ups</item>
        <item>Sit-ups</item>
        <item>Pull-ups</item>
        <item>Run</item>
        <item>Cycling</item>
        <item>Swim</item>
        <item>Bench Press</item>
        <item>Squats</item>
        <item>Bbell Bicep Curls</item>
    </string-array>

</resources>
