<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/drawer_title_profile_options" />
        <!-- TO BE IMPLEMENTED LATER
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="OPTION 2" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="OPTION 3" />

         //TO BE IMPLEMENTED LATER -->
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_menu_black_24dp"
            android:title="@string/activity_name" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/drawer_title_add_workout" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_stats_black_24dp"
            android:title="@string/drawer_title_stats"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_title_settings" />
    </group>

</menu>
