<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.miracosta.cs134.workoutapprefactored.NewUserEntry"
    tools:layout_editor_absoluteY="81dp">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="352dp"
        android:layout_height="379dp"
        android:layout_marginBottom="66dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/buttonUserEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="115dp"
            android:layout_marginStart="116dp"
            android:contentDescription="@string/create_account"
            android:elevation="8dp"
            android:text="@string/create_account"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newusername"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/newemail"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/newpassword"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/newusername"
            app:layout_constraintTop_toBottomOf="@+id/newemail" />

        <EditText
            android:id="@+id/newusername"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_user"
            android:inputType="textAutoComplete"
            app:layout_constraintBottom_toTopOf="@+id/buttonUserEntry"
            app:layout_constraintTop_toBottomOf="@+id/newpassword" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_player_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
